Fix alignment selected view tab in Scheduler (T620573)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -404,10 +404,7 @@
         width: @SCHEDULER_SWITCHER_TAB_WIDTH;
 
         &.dx-tab-selected:before {
-            position: absolute;
             bottom: -2px;
-            width: 100%;
-            height: 2px;
             content: '';
             right: 0;
         }
